<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 로고 이미지 -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="102dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/loading_image" />

    <TextView
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/personalinfo"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>


    <EditText
        android:id="@+id/edit_text_name"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="textPersonName"
        android:enabled="false"/>

    <EditText
        android:id="@+id/edit_text_birth"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="나이"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/phonenum"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/emailaddr"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button_2"
        android:textColor="#40513B"
        android:text="@string/chagepw"
        tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/button_unregister"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button_2"
        android:textColor="#40513B"
        android:text="@string/withdrawal"
        tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

    <!-- 수정 완료 버튼 -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:text="@string/proedit_com"
        android:textColor="@color/text_color"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
