<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 로고 이미지 -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="102dp"
        android:layout_height="67dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/loading_image" />

    <TextView
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/chagepw1"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edittext_current_password"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:textColor="@color/comment_color"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:padding="15dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edittext_new_password"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:textColor="#555555"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:padding="15dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edittext_confirm_password"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:textColor="#555555"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:padding="15dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- 수정 완료 버튼 -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/proedit_com"
        android:textColor="@color/text_color"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
