<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 로고 이미지 -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="102dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/loading_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/logo_image">

        <TextView
            android:id="@+id/profile_edit"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:padding="16dp"
            android:text="@string/edit_profile"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:textColor="@color/text_color" />


        <TextView
            android:id="@+id/personalinfo_edit"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:text="@string/edit_personinfo" />


        <TextView
            android:id="@+id/scrap_user"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:text="스크랩된 가이드" />


        <TextView
            android:id="@+id/inquiry_edit"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:text="@string/edit_inquiry" />


        <TextView
            android:id="@+id/notice_edit"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:text="@string/edit_notice" />


        <Button
            android:id="@+id/logout_edit"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/round_button"
            android:textColor="@color/text_color"
            android:text="@string/edit_logout"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>


</RelativeLayout>