<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:hint="@string/title_please"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1" />

        <com.capston.eduguide.post.MeasuredViewPager
            android:id="@+id/vp"
            android:contentDescription="\\뷰페이저-크기는 맞춤식(MeasuredViewPager사용)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/post_down_stroke">

        </com.capston.eduguide.post.MeasuredViewPager>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/text_color"
            android:text="@string/desc"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/postInfo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/guide_border"
            android:gravity="top"
            android:hint="@string/content_please"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/tag"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/postTag"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border"
            android:hint="@string/tag_please"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false" />

        <Button
            android:id="@+id/postingSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="SUBMIT"
            android:background="@drawable/round_button"
            android:textColor="@color/text_color" />

    </LinearLayout>
</ScrollView>