<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- 로고 이미지 -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="102dp"
        android:layout_height="67dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/loading_image" />

    <TextView
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/proedit_title"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <!-- 닉네임 입력 -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:hint="@string/nickname_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_name_edittext"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="#616161"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 자기소개 입력 -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selfinfo_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/self_intro_edittext"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:textColor="@color/black"
            android:textColorHint="#616161"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 수정 완료 버튼 -->
    <Button
        android:id="@+id/submit_button"
        android:layout_marginStart="30dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:textColor="@color/text_color"
        android:text="@string/proedit_com"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
