<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpActivity">

    <!-- 로고 이미지 -->

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="102dp"
        android:layout_height="67dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/loading_image"
        app:layout_constraintBottom_toTopOf="@+id/signUp_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/signUp_id"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/logo_image"
        app:layout_constraintStart_toStartOf="@+id/logo_image"
        app:layout_constraintTop_toBottomOf="@+id/logo_image"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/signUp_age"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/birth"
        android:inputType="textPersonName"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/signUp_name"
        app:layout_constraintStart_toStartOf="@+id/signUp_name"
        app:layout_constraintTop_toBottomOf="@+id/signUp_name" />

    <EditText
        android:id="@+id/signUp_phone"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/phonenum"
        android:inputType="textPersonName"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/signUp_email"
        app:layout_constraintStart_toStartOf="@+id/signUp_email"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:text="SIGN UP"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/signUp_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUp_age"
        app:layout_constraintTop_toBottomOf="@+id/signUp_age" />

    <EditText
        android:id="@+id/signUp_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/signUp_phone"
        app:layout_constraintStart_toStartOf="@+id/signUp_phone"
        app:layout_constraintTop_toBottomOf="@+id/signUp_phone" />

    <EditText
        android:id="@+id/signUp_email"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/emailaddr"
        android:inputType="textPersonName"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/signUp_password"
        app:layout_constraintStart_toStartOf="@+id/signUp_password"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password" />

    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPersonName"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/signUp_id"
        app:layout_constraintStart_toStartOf="@+id/signUp_id"
        app:layout_constraintTop_toBottomOf="@+id/signUp_id" />


</androidx.constraintlayout.widget.ConstraintLayout>