<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp">

    <!-- 로고 이미지 -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="102dp"
        android:layout_height="67dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/loading_image" />


    <LinearLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/logo_image"
        android:padding="16dp">

        <!-- 프로필 사진 -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user_profile_image"
            tools:ignore="ImageContrastCheck" />

        <!-- 프로필 정보(이름, 자기소개 ) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/이름"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/self_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/자기소개"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- 설정 아이콘-->
        <ImageButton
            android:id="@+id/settings_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/settings_description"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/user_settings" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/profile_info">

        <Button
            android:id="@+id/first_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="My Guides"
            android:background="@drawable/round_button"
            android:textColor="#000000"
            android:textSize="15sp"
            tools:ignore="VisualLintButtonSize"
            android:enabled="false"/>

    </LinearLayout>

    <!-- 게시물 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_buttons"
        android:layout_marginTop="6dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_buttons"
        app:spanCount="3"
        tools:listitem="@layout/user_item_grid" />


</RelativeLayout>